@@ -9,7 +9,7 @@ import com.github.tth05.jtjnst.util.ASTUtils;
 public class JTJMethodCall extends JTJChildrenNode {
 
     public static final String METHOD_CALL_START_WITH_RETURN = "((%s)";
-    public static final String METHOD_CALL_START = "((BiFunction<List<Object>, Object[], Object[]>)global.get(%d)).apply(Arrays.asList(";
+    public static final String METHOD_CALL_START = "((BiFunction<List<Object>, Object[], Object[]>)global.get(%d)).apply(java.util.List.of(";
     public static final String METHOD_CALL_END = "), new Object[0])";
     public static final String METHOD_CALL_END_WITH_RETURN = "), new Object[1])[0])";
 
